# Awair-to-TimescaleDB

./: .gitignore  LICENSE  config.example.toml  grafana-dashboard-export.json  main.py  pyproject.toml  readme.md  schema.sql
awair/: __init__.py
