[tool.poetry]
name = "awair-to-TimescaleDB"
version = "0.1.0"
description = "Pulls data from Awair API and pushes the data into TimescaleDB"
authors = ["Myles Johnson"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
psycopg = {extras = ["binary"], version = "^3.1"}
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
