[tool.poetry]
name = "awair-to-TimescaleDB"
version = "0.1.0"
description = "Pulls data from Awair API and pushes the data into TimescaleDB"
authors = ["Myles Johnson"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
psycopg = {extras = ["binary"], version = "^3.1"}
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
